扩展了 clouflow dsl的语法 新增了更多语法特性 创建了 git 微服务 平台支持git仓库储存 并且把git仓库归为公开仓库的一类 网关做了相关修改 路由新的微服务git 文件储存服务更新 为git提供储存接口 broker 文件储存服务和git微服务 git object共享同一个物理储存层 创建了独立的数据库 Git DB 以及相关的数据表 主业务服务做了更新 对接了 git服务相关的内部接口 比方说像空间权限认证 更新主业务服务中的空间 业务层的Service 主要是重新定义公开空间这个类型的概念 让创建公开空间 的时候可以选择创建 Git仓库 还是普通的公开空间 并且它们的空间初始化做了适配 im-service微服务架构做了大重构 把它改为了im-platform im-router im-server im-commmon im-client 五大模块 其中前三个为独立的子服务 都可以单独横向扩展和编排 还增加了im-test-client做我们整个im子项目的 测试 node.js 客户端模块 重构了好友相关的im数据表 还有API接口 新增了群聊相关的API接口 还有数据表 im-platform 持久层 业务层都做了对接 web项目的 im相关的子页面和组件 都进行了重构适应了新版本的im子系统 包括im API SDK模块 以及store状态 扩展了前端im子页面 新增的emoji表情库资源库 支持 Unicode Emoji 绝大多数表情贴纸 使用emoji-picker-element 平台表情 选用了giphy等待后续完善对接 现在还不能显示 更新了项目相关地方的文档 并且还使用了draw.io生成了项目的微服务架构图 具体看/docs/architecture目录